2007-06-15 Sasha Khapyorsky <sashak@voltaire.com>

	* osm_helper.c: Fix PortInfo:CapMask printing when CapMask is 0

2007-06-11 Sasha Khapyorsky <sashak@voltaire.com>

	* osm_helper.c: Remove OSM_SM_SIGNAL_MASTER_OR_HIGHER_SM_DETECTED
	  from __osm_sm_mgr_signal_str 

2007-06-06 Sasha Khapyorsky <sashak@voltaire.com>

	* osm_helper.c: More optimally deal with manufacturer strings

2007-06-06 Hal Rosenstock <halr@voltaire.com>

	* osm_helper.c: Add Sun to osm_get_manufacturer_str 

2007-06-04 Hal Rosenstock <halr@voltaire.com>

	* osm_helper.c: Add 8x to __osm_lwa_str_fixed_width

2007-05-07 Sasha Khapyorsky <sashak@voltaire.com>

	* osm_helper.c: Remove repeated strlen() calls

2007-04-27 Ira K. Weiny <weiny2@llnl.gov> 

	* osm_helper.c: In osm_dump_notice, use ib_get_producer_type_str
	  for printing producer type 

2007-04-26 Hal Rosenstock <halr@voltaire.com>

	* osm_helper.c: Clarify the proper usage of
	  osm_get_node_type_str_fixed_width to take uint8_t rather
	  than uint32_t for node_type argument

2007-04-25 Yevgeny Kliteynik <kliteyn@dev.mellanox.co.il>

	* osm_helper.c: Fix problematic usage of sprintf() when 
	  source and destination strings overlap.

2007-04-24 Albert L. Chu <chu11@llnl.gov>

	* osm_helper.c: In osm_get_node_type_str_fixed_width, fix
	  both range limit and endian of node type check

2007-03-29 Hal Rosenstock <halr@voltaire.com>

	* configure.in: Bump version to 2.2.0

2007-03-21 Sasha Khapyorsky <sashak@voltaire.com>

	* osm_log.c: Changed to support daemon mode

2007-03-01 Hal Rosenstock <halr@voltaire.com>

	* configure.in: Bump version to 2.1.2

	* osm_helper.c: Eliminate extraneous comma in __osm_disp_msg_ string
	  for OSM_MSG_MAD_PORT_INFO

2007-02-26 Sasha Khapyorsky <sashak@voltaire.com>

	* osm_log.c: Minor optimization to previous change to osm_log
	  for also flushing on OSM_LOG_SYS

2007-02-26 Yevgeny Kliteynik <kliteyn@dev.mellanox.co.il>

	* osm_log.c: In osm_log, flush log on OSM_LOG_SYS (as well
	  as OSM_LOG_ERROR)
